EXTRA_DIST =        \
    moo-comps.m4    \
    moo-debug.m4    \
    moo-dirs.m4     \
    moo-fam.m4      \
    moo-funcs.m4    \
    moo-gtk.m4      \
    moo-os.m4       \
    moo-pcre.m4     \
    moo-pygtk.m4    \
    moo-python.m4   \
    moo-version.m4  \
    moo-windres.m4  \
    moo-xdgmime.m4  \
    moo-xml.m4
