IF(MOO_ENABLE_PROJECT)
  ADD_DEFINITIONS(-DMOO_ENABLE_PROJECT)
ENDIF(MOO_ENABLE_PROJECT)

SET(MEDIT_SOURCES mem-debug.h run-tests.h parse.h main.c)
SET(medit_libs meditplugins moo)

MOO_WIN32_RESOURCE(medit.rc.in medit)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(medit WIN32 ${MEDIT_SOURCES})
TARGET_LINK_LIBRARIES(medit ${medit_libs} ${MOO_DEP_LIBS})
INSTALL(TARGETS medit DESTINATION ${BINDIR})
